--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0"
   }
