--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
